Fix h1 on mobile

--- a/src/css/buttons.css
+++ b/src/css/buttons.css
@@ -88,19 +88,6 @@
   }
 }
 @media(max-width:1024px) {
-    #home {
-        min-width: none;
-      }
-    
-      #home h1 {
-        font-size: 68px;
-        width: 320px;
-      }
-    
-      #home h1 .cLetter {
-        font-size: 94px;
-        top: -37%
-      }
     
       .linkBtn {
         font-size: 20px;
